--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,12 +42,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
       - name: Install dependencies
-        run: npm ci
+        run: npm install semantic-release semantic-release-gitmoji @semantic-release/exec @semantic-release/github
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           path: dist/
+      - run: |
+          echo '{"plugins": ["semantic-release-gitmoji", ["@semantic-release/exec", {"verifyReleaseCmd": "./.github/scripts/before-release.sh ${nextRelease.version}"}],["@semantic-release/github",{"assets": {"path": "dist/"}}]]}' > .releaserc.json
+      - run: cat .releaserc.json
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: npx semantic-release --plugins
