--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - name: Install dependencies
         run: npm install semantic-release semantic-release-gitmoji @semantic-release/exec @semantic-release/github
       - name: Download artifacts
