--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       package_name: ${{steps.package_name.outputs.package_name}}
     steps:
       - id: package_name
-        run: echo "::set-output name=package_name::$(echo ${GITHUB_REPOSITORY##*/})-$(echo ${GITHUB_REF#refs/*/})"
+        run: echo "::set-output name=package_name::$(echo ${GITHUB_REPOSITORY##*/})-$(echo ${GITHUB_REF#refs/*/})" | sed 's#/#-#g'
 
   build:
     needs: prebuild
@@ -40,14 +40,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - name: Install dependencies
-        run: npm ci
+        run: npm install semantic-release semantic-release-gitmoji @semantic-release/exec @semantic-release/github
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           path: dist/
+      - run: |
+          echo '{"plugins": ["semantic-release-gitmoji", ["@semantic-release/exec", {"verifyReleaseCmd": "./.github/scripts/before-release.sh ${nextRelease.version}"}],["@semantic-release/github",{"assets": {"path": "dist/"}}]]}' > .releaserc.json
+      - run: cat .releaserc.json
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: npx semantic-release --plugins
