--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+LightingData.asset*
+Lightmap-*.png*
+Lightmap-*.exr*
+Lightmap-*.png*
+ReflectionProbe-*.exr*
