--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,7 +1,7 @@
+extends: semantic-release-monorepo
 plugins:
   - semantic-release-gitmoji
-  - - "@semantic-release/npm"
-    - npmPublish: false
-      pkgRoot: /Packages/com.nekometer.esnya.udon-radio-communication
-  - "@semantic-release/github"
-  - "@semantic-release/git"
+  # - - "@semantic-release/npm"
+  #   - npmPublish: false
+  # - "@semantic-release/github"
+  # - "@semantic-release/git"
