--- a/.github/workflows/vpm-release.yml
+++ b/.github/workflows/vpm-release.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: apt -q update && apt install -qy git
+      #- run: apt -q update && apt install -qy git
       - uses: actions/setup-node@v3
         with:
           node-version: lts/*
