--- a/.github/workflows/vpm-release.yml
+++ b/.github/workflows/vpm-release.yml
@@ -11,3 +11,5 @@ jobs:
           node-version: lts/*
       - run: npm ci
       - run: npx semantic-release --dry-run --debug
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
