--- a/.github/workflows/vpm-release.yml
+++ b/.github/workflows/vpm-release.yml
@@ -5,11 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      #- run: apt -q update && apt install -qy git
       - uses: actions/setup-node@v3
         with:
           node-version: lts/*
       - run: npm ci
-      - run: npx semantic-release --dry-run --debug
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
