--- a/.github/workflows/vpm-release.yml
+++ b/.github/workflows/vpm-release.yml
@@ -14,3 +14,4 @@ jobs:
       - run: npx -ws semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
