:bug: fix: Fix .npmrc

--- a/.github/workflows/vpm-release.yml
+++ b/.github/workflows/vpm-release.yml
@@ -15,3 +15,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_CONFIG_REGISTRY: https://npm.pkg.github.com
