--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,8 +1,9 @@
 plugins:
   - semantic-release-gitmoji
-  - - "@semantic-release/npm"
   - - "@semantic-release/exec"
     - publishCmd: VERSION=${nextRelease.version} npx ts-node ../../.github/scripts/create-unitypackage.ts
+  - - "@semantic-release/exec"
+    - publishCmd: npm publish -ws
   - - "@semantic-release/github"
     - assets: dist/*
   - "@semantic-release/git"
