--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,7 +1,9 @@
-extends: semantic-release-monorepo
 plugins:
   - semantic-release-gitmoji
-  - - "@semantic-release/npm"
-    - npmPublish: false
-  - "@semantic-release/github"
+  - - "@semantic-release/exec"
+    - publishCmd: VERSION=${nextRelease.version} npx ts-node ./.github/scripts/create-unitypackage.ts
+  # - - "@semantic-release/exec"
+  #   - publishCmd: npm publish -ws
+  - - "@semantic-release/github"
+    - assets: dist/*
   - "@semantic-release/git"
