:recycle: refactor: New U# coding style

--- a/Packages/com.nekometer.esnya.udon-radio-communications/Scripts/UdonRadioCommunication.Runtime.asmdef
+++ b/Packages/com.nekometer.esnya.udon-radio-communications/Scripts/UdonRadioCommunication.Runtime.asmdef
@@ -4,8 +4,7 @@
         "VRC.Udon",
         "UdonSharp.Runtime",
         "UdonSharp.Editor",
-        "Unity.TextMeshPro",
-        "UdonToolkitRuntime"
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
