--- a/Packages/com.nekometer.esnya.udon-radio-communications/package.json
+++ b/Packages/com.nekometer.esnya.udon-radio-communications/package.json
@@ -18,7 +18,8 @@
   },
   "gitDependencies": {
     "com.merlinvr.udonsharp": "https://github.com/vrchat-community/UdonSharp.git?path=/Packages/com.vrchat.UdonSharp#1.0.1",
-    "com.vrchat.worlds": "https://github.com/vrchat/packages.git?path=/packages/com.vrchat.worlds#3.0.2"
+    "com.vrchat.base": "https://github.com/vrchat/packages.git?path=/packages/com.vrchat.base#3.0.4",
+    "com.vrchat.worlds": "https://github.com/vrchat/packages.git?path=/packages/com.vrchat.worlds#3.0.4"
   },
   "legacyFolders": [
     "Assets\\UdonRadioCommunication"
