:wrench: chore: Refine dependency lists

--- a/Packages/com.nekometer.esnya.udon-radio-communications-sf/Scripts/UdonRadioCommunication.SF.Runtime.asmdef
+++ b/Packages/com.nekometer.esnya.udon-radio-communications-sf/Scripts/UdonRadioCommunication.SF.Runtime.asmdef
@@ -13,9 +13,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": [
-        "UDON"
-    ],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": false,
+    "defineConstraints": [
+        "UDONSHARP"
+    ]
 }
