--- a/Packages/com.nekometer.esnya.udon-radio-communications/Scripts/UdonRadioCommunication.Runtime.asmdef
+++ b/Packages/com.nekometer.esnya.udon-radio-communications/Scripts/UdonRadioCommunication.Runtime.asmdef
@@ -12,7 +12,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": [],
+    "defineConstraints": ["UDONSHARP"],
     "versionDefines": [],
     "noEngineReferences": false
 }
